Updates from ShareLaTeX

--- a/ExSPLArch.tex
+++ b/ExSPLArch.tex
@@ -44,7 +44,7 @@
 
 \begin{document}
 
-\title{Extraction of Software Product Line Architectures from Many Software Variants}
+\title{Extraction of Software Product Line Architectures from Many System Variants}
 % Use \titlerunning{Short Title} for an abbreviated version of
 % your contribution title if the original one is too long
 \author{Anas Shatnawi, Abdelhak Seriai and Houari Sahraoui}
