Revised version based on the reviewers' comments

--- a/ExSPLArch.bib
+++ b/ExSPLArch.bib
@@ -8,6 +8,59 @@
   publisher={Addison-Wesley Reading}
 }
 
+@inproceedings{lima2017investigating,
+  title={Investigating the recovery of product line architectures: an approach proposal},
+  author={Lima, Crescencio and Chavez, Christina and de Almeida, Eduardo Santana},
+  booktitle={International Conference on Software Reuse},
+  pages={201--207},
+  year={2017},
+  organization={Springer}
+}
+
+@article{abdellatiftaxonomy,
+  title={A Taxonomy of Service Identification Approaches},
+  author={Abdellatif, Manel and Shatnawi, Anas and Mili, Hafedh and Moha, Naouel and El Boussaidi, Ghizlane and Hecht, Geoffrey and Privat, Jean and Gu{\'e}h{\'e}neuc, Yann-Ga{\"e}l}
+}
+
+@inproceedings{businge2018clone,
+  title={Clone-Based Variability Management in the Android Ecosystem},
+  author={Businge, John and Openja, Moses and Nadi, Sarah and Bainomugisha, Engineer and Berger, Thorsten},
+  booktitle={2018 IEEE International Conference on Software Maintenance and Evolution (ICSME)},
+  pages={625--634},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{carbonnel2017feature,
+  title={Feature model composition assisted by formal concept analysis},
+  author={Carbonnel, Jessie and Huchard, Marianne and Miralles, Andr{\'e} and Nebut, Cl{\'e}mentine},
+  booktitle={ENASE: Evaluation of Novel Approaches to Software Engineering},
+  pages={27--37},
+  year={2017},
+  organization={SciTePress}
+}
+
+
+
+@inproceedings{shatnawi2018identifying,
+  title={Identifying software components from object-oriented APIs based on dynamic analysis},
+  author={Shatnawi, Anas and Shatnawi, Hudhaifa and Saied, Mohamed Aymen and Shara, Zakarea Al and Sahraoui, Houari and Seriai, Abdelhak},
+  booktitle={Proceedings of the 26th Conference on Program Comprehension},
+  pages={189--199},
+  year={2018},
+  organization={ACM}
+}
+
+@article{rathee2019multi,
+  title={A multi-objective search based approach to identify reusable software components},
+  author={Rathee, Amit and Chhabra, Jitender Kumar},
+  journal={Journal of Computer Languages},
+  volume={52},
+  pages={26--43},
+  year={2019},
+  publisher={Elsevier}
+}
+
 @book{cormen2009introduction,
   title={Introduction to algorithms},
   author={Cormen, Thomas H and Leiserson, Charles E and Rivest, Ronald L and Stein, Clifford},
